:lipstick: :bug: Allow section shadows to overflow

--- a/src/kirby/components/list/list.component.scss
+++ b/src/kirby/components/list/list.component.scss
@@ -9,10 +9,6 @@ $item-height: size('xxxl');
   display: block;
 }
 
-ion-list {
-  overflow: hidden;
-}
-
 ion-list,
 .list-items {
   > ion-item {
